fixed z-index for select dropdown

--- a/src/packages/ui/select/select.component.scss
+++ b/src/packages/ui/select/select.component.scss
@@ -34,6 +34,7 @@
   }
 
   ul.available-items {
+    z-index: 1001;
     border: 1px solid dimgray;
     position: absolute;
     width: 100%;
